log
Wed Mar 26 11:53:26 -03 2025: 
 tests:  0|6
total_score: 0/70
25021aa
Wed Mar 26 11:54:47 -03 2025: 
 list.c | 53 ++++++++++++++++++++++++++++++++++++-----------------
 1 file changed, 36 insertions(+), 17 deletions(-)
 tests:  1|5
total_score: 10/70
4bdf8c7
Wed Mar 26 11:57:28 -03 2025: 
 list.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
 tests:  1|5
total_score: 10/70
052963f
Wed Mar 26 11:58:47 -03 2025: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
beed3ad
Wed Mar 26 11:59:56 -03 2025: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
f0e69d3
Wed Mar 26 12:01:21 -03 2025: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
59fbb1a
Wed Mar 26 12:06:07 -03 2025: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
./list.c:44:18: error: format specifies type 'int' but the argument has type 'void *' [-Werror,-Wformat]
    printf("%d", list->head->data);
            ~~   ^~~~~~~~~~~~~~~~
./list.c:45:1: error: non-void function does not return a value [-Werror,-Wreturn-type]
}
^
2 errors generated.
Compilation failed
45b67a1
Wed Mar 26 12:07:24 -03 2025: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fa74edc
Wed Mar 26 12:10:20 -03 2025: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
b9ffbf2
Wed Mar 26 12:10:56 -03 2025: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
2a4c4b3
Wed Mar 26 12:11:57 -03 2025: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
92d518d
Wed Mar 26 12:13:56 -03 2025: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
./list.c:53:19: error: using the result of an assignment as a condition without parentheses [-Werror,-Wparentheses]
    if (aux->next = NULL)
        ~~~~~~~~~~^~~~~~
./list.c:53:19: note: place parentheses around the assignment to silence this warning
    if (aux->next = NULL)
                  ^
        (               )
./list.c:53:19: note: use '==' to turn this assignment into an equality comparison
    if (aux->next = NULL)
                  ^
                  ==
1 error generated.
Compilation failed
c01b51d
Wed Mar 26 12:14:09 -03 2025: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
217bc6e
Wed Mar 26 12:15:01 -03 2025: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
631dbbd
Wed Mar 26 12:17:33 -03 2025: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
b3945b1
Wed Mar 26 12:18:34 -03 2025: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1ef7686
Wed Mar 26 12:18:58 -03 2025: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
d9cf78e
